# godot-sandbox-programs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cmake  embedded.sh  test_mlir.cpp  zig.cmd  zig.sh
.github/workflows/: builds.yml  stablehlo-to-riscv.yml  zig-cross.yml  zig-macos.yml  zig-windows.yml
asm/: CMakeLists.txt  main.cpp
asm/asmjit/: CMakeLists.txt  build.sh
cmake/: zig-toolchain.cmake
ext/: CMakeLists.txt
hello-world/: CMakeLists.txt  main.cpp
libtcc/: CMakeLists.txt
lua/: CMakeLists.txt
luajit/: CMakeLists.txt  toolchain.cmake
mir/: CMakeLists.txt  main.cpp
programs/: CMakeLists.txt
programs/asm/: CMakeLists.txt  main.cpp
programs/asm/asmjit/: asmjit_main.c
programs/asm/extra/: obstack.c  obstack.h
programs/automerge/: CMakeLists.txt  Cargo.toml
programs/automerge/src/: automerge.rs  main.rs
programs/gdscript/: CMakeLists.txt  README.md  main.cpp
programs/hello-world/: README.md  main.cpp
programs/libtcc/: .gitignore  CMakeLists.txt  main.cpp
programs/luajit/: CMakeLists.txt  README.md  main.cpp
programs/mir/: CMakeLists.txt  main.cpp
programs/robust_skin_weight_transfer/: CMakeLists.txt  robust_weight_transfer.cpp
programs/stablehlo-to-riscv/: AGENTS.md  CMakeLists.txt  cpp_generator.h  main.cpp  mlir_compiler.cpp  mlir_compiler.h  riscv_compiler.cpp  riscv_compiler.h  stablehlo_parser.cpp
programs/stablehlo-to-riscv/test_fixtures/: README.md  e2e_test.mlir  generate_mlir_fixtures.md  test_add.mlir  test_assign.mlir  test_if.mlir  test_multiply.mlir  test_simple.mlir
test_build/: CMakeLists.txt
tools/gdscript-stablehlo-to-elf/src/: cpp_generator.cpp  main.cpp  stablehlo_parser.h
